# GScript.GCLib

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build.yml
examples/python/: connect_from_headless_config.py  gclib_common.py  settings.sample.ini  smoke_exports.py  test_gclib_common.py  test_v5.py  test_v6.py
include/: TClient.h  TClientPacketDispatch.h  TClientPlayerProps.h  TClientProtocol.h  TClientProtocolIO.h  TClientProtocolV5.h  TClientProtocolV6.h  TClientSocket.h  gclib.h
src/: TClientPacketDispatch.cpp  TClientProtocol.cpp  TClientProtocolIO.cpp  TClientProtocolV5.cpp  TClientProtocolV6.cpp  gclib.cpp
